force-app/main/default/objects/User_Acceptance_Test__c/User_Acceptance_Test__c.object-meta.xml
<CustomObject>
    <label>User Acceptance Test</label>
    <nameField>
        <displayFormat>UAT-{0000}</displayFormat>
        <label>User Acceptance Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Acceptance Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>