force-app/main/default/objects/User_Acceptance_Test__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>User Acceptance Tests</relationshipLabel>
    <relationshipName>User_Acceptance_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>