force-app/main/default/objects/User_Acceptance_Test__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <inlineHelpText>Details about what is being tested.</inlineHelpText>
    <label>Scope</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>