force-app/main/default/objects/User_Acceptance_Test__c/fields/UAT_Result__c.field-meta.xml
<CustomField>
    <fullName>UAT_Result__c</fullName>
    <label>UAT Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Needs Re-Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>