force-app/main/default/objects/User_Acceptance_Test__c/fields/UAT_Status__c.field-meta.xml
<CustomField>
    <fullName>UAT_Status__c</fullName>
    <label>UAT Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>